# EmbeddedFramework

./: .gitignore  README.md  tags
EventFramework/: .gitignore  EventFramework.vcxproj  task1.c  task1.h  task2.c  task2.h
EventFramework/Debug/: .gitignore
EventFramework/EventFramework/: EventFramework.c  eventQ.h  frameworkConfig.h  taskEngine.h  timer.c  timer.h  types.h
EventFramework/EventFramework/Win32/: bsp.c  bsp.h
MSVC/: .gitignore  EventFramework.sln
MSVC/EventFramework/: .gitignore  EventFramework.vcxproj  EventFrameworkMain.cpp  stdafx.cpp  task1.c  task1.h  task2.c
src/: .gitignore  CMakeLists.txt  EventFramework.c  EventFramework.h  Queue.c  eventQ.c  eventQ.h  events.h  framework.c  framework.h  log.h  main.c  tags  task.c  task1.c  task1.h  task2.c  taskEngine.c  taskEngine.h  timer.c
src/app/: eventDefinition.h  frameworkConfig.h  task1.c  task1.h  task2.c  task2.h  taskDeclaration.h  taskDefinition.h
src/bsp/: bsp.h
src/bsp/Win32/: bsp.c
src/framework/: eventQ.c  eventQ.h  events.h  framework.h  frameworkConfigExample.h  log.h  main.c  task.c  task.h  taskEngine.c  taskEngine.h  tasks.h  timer.c  timer.h
src/utils/: queue.c  queue.h  types.h
