cmake_minimum_required (VERSION 3.0)
project (EmbeddedFramework)
set (TARGET_NAME APP)
set (FRAMEWORK eventQ.c log.c taskEngine.c task.c timer.c main.c)
set (UTILS utils/queue.c)
set (USER task1.c task2.c)
if (WIN32 OR MINGW)
    set (BSP bsp/Win32/bsp.c)
    message ("SET BSP TO bsp/Win32/bsp.c")
endif ()
set (SOURCE_FILE_SET ${FRAMEWORK} ${UTILS} ${BSP} ${USER})
add_executable (${TARGET_NAME} ${SOURCE_FILE_SET})
if (MINGW)
    set (CMAKE_C_COMPILER gcc)
    message ("SET COMPILER TO gcc")
endif ()
