cmake_minimum_required (VERSION 3.0)
project (EmbeddedFramework)
set (TARGET_NAME APP)
set (FRAMEWORK framework/eventQ.c framework/log.c framework/taskEngine.c framework/task.c framework/timer.c framework/main.c)
set (UTILS utils/queue.c)
set (APP app/task1.c app/task2.c)
if (WIN32 OR MINGW)
    set (BSP bsp/Win32/bsp.c)
    message ("SET BSP TO bsp/Win32/bsp.c")
endif ()
set (SOURCE_FILE_SET ${FRAMEWORK} ${UTILS} ${BSP} ${APP})
add_executable (${TARGET_NAME} ${SOURCE_FILE_SET})
if (MINGW)
    set (CMAKE_C_COMPILER gcc)
    message ("SET COMPILER TO gcc")
endif ()
